--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,17 @@
+body {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+/* Not sure if the flex-wrap has any effect here */
+/* .homepage {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+} */
+
 .navbar {
     display: flex;
 }
@@ -12,5 +26,25 @@
 
 .introduction {
     display: flex;
-    justify-content: center;
 }
+
+.colorful-text {
+    color: rgb(100, 149, 237);
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.socials {
+    display: flex;
+    gap: 15px;
+}
+
+.socials a {
+    text-decoration: none;
+    color: inherit;
+}
+
+
