--- a/client/src/App.css
+++ b/client/src/App.css
@@ -113,13 +113,8 @@ body {
     align-items: center;
 }
 
-.listoverview-projects {
-    list-style-type: none;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 200px;
+.grid-container {
+    display: grid;
+    gap: 50px;
+    
 }
