changed margin on socials intro

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -70,6 +70,7 @@ body {
 
 .socials-intro {
     margin-top: 10px;
+    margin-bottom: 5px;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
