styled the socials intro

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -70,10 +70,9 @@ body {
 
 .socials-intro {
     margin-top: 10px;
-    margin-bottom: 20px;
     display: flex;
-    align-items: center;
     flex-wrap: wrap;
+    gap: 20px;
 }
 
 .subheading-overview {
