--- a/client/src/Contact.css
+++ b/client/src/Contact.css
@@ -8,8 +8,8 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 50%;
-    min-width: 400px;
+    width: 80%;
+    max-width: 600px;
 }
 
 .submit-button {
@@ -30,3 +30,22 @@
     color: black;
     transition: 0.7s;
 }
+
+.contact-form input {
+    background-color: rgb(240, 240, 240);
+    border-radius: 3px;
+    border-style: solid;
+    border-width: 1px;
+    height: 30px;
+}
+
+.contact-form textarea {
+    min-height: 200px; 
+    height: 200px;
+    resize: vertical;
+    background-color: rgb(240, 240, 240);
+    border-radius: 3px;
+    border-style: solid;
+    border-width: 1px;
+}
+
