--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,11 @@
+
+
 body {
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 5%;
     padding-right: 5%;
+    
 }
 
 .navbar {
@@ -32,7 +35,7 @@ body {
 }
 
 .menu button:hover {
-    background-color: white;
+    background-color: rgb(200, 200, 200);
     border-color: black;
     color: black;
     transition: 0.7s;
@@ -76,7 +79,7 @@ body {
 }
 
 .subheading-overview {
-    border: solid #d0d0d0 1px;
+    border: solid rgb(200, 200, 200) 1px;
     padding-left: 10px;
     padding-right: 10px;
     margin-bottom: 10px;
@@ -119,7 +122,7 @@ body {
 }
 
 .back-button:hover {
-    background-color: white;
+    background-color: rgb(200, 200, 200);
     border-color: black;
     color: black;
     transition: 0.7s;
